# tonic-buf-build

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: check.yaml  release.yaml
examples/buf-work-yaml/: Cargo.toml  buf.work.yaml  build.rs
examples/buf-work-yaml/buf-module/: buf.yaml  sample.proto
examples/buf-work-yaml/src/: main.rs
examples/buf-yaml/: Cargo.toml  build.rs
src/: buf.rs  error.rs  lib.rs
