[package]
name = "tonic-buf-build"
version = "0.1.0"
edition = "2021"
description = "A build helper that integrates buf.build to tonic-build."
license = "MIT"
repository = "https://github.com/Valensas/tonic-buf-build"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-build = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.22"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
prost-build = "0.11.9"
scopeguard = "1.2.0"
