[package]
name = "buf-work-yaml"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.13"
tokio = {version = "1.40.0", features = ["full"]}
prost = "0.13.3"

[build-dependencies]
tonic-buf-build = {path = "../../"}
tonic-build = "*"
